Update gvoice displayname template

--- a/bridgeconfig/gvoice.tpl.yaml
+++ b/bridgeconfig/gvoice.tpl.yaml
@@ -1,9 +1,11 @@
 # Network-specific config options
 network:
     # Displayname template for SMS users. Available variables:
-    #  .Name (same as phone number in most cases)
+    #  .Name - same as phone number in most cases
+    #  .Contact.Name - name from contact list
+    #  .Contact.FirstName - first name from contact list
     #  .PhoneNumber
-    displayname_template: {{ `"{{.Name}}"` }}
+    displayname_template: {{ `"{{ or .Contact.Name .Name }}"` }}
 
 {{ setfield . "CommandPrefix" "!gv" -}}
 {{ setfield . "DatabaseFileName" "mautrix-gvoice" -}}
