--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -91,7 +91,7 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=raw,value=latest,enable=${{  github.ref == 'refs/heads/main' }}
+            type=raw,value=latest,enable={{is_default_branch}}
             type=sha,format=long,prefix=
 
       - name: Docker Build
