--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -74,7 +74,14 @@ jobs:
           if-no-files-found: error
 
   build-docker:
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.runs-on }}
+    strategy:
+      matrix:
+        include:
+        - runs-on: ubuntu-latest
+          target: amd64
+        - runs-on: ubuntu-arm64
+          target: arm64
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -92,7 +99,7 @@ jobs:
           cache-from: ${{ env.GHCR_REGISTRY_IMAGE }}:latest
           pull: true
           file: docker/Dockerfile
-          tags: ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }}
+          tags: ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }}-${{ matrix.target }}
           push: true
           build-args: |
             COMMIT_HASH=${{ github.sha }}
@@ -101,7 +108,6 @@ jobs:
     runs-on: ubuntu-latest
     needs:
       - build-docker
-    if: github.ref == 'refs/heads/main'
     steps:
       - name: Login to registry
         uses: docker/login-action@v3
@@ -110,6 +116,15 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - uses: beeper/docker-retag-push-latest@main
-        with:
-          image: ${{ env.GHCR_REGISTRY_IMAGE }}
+      - name: Create commit manifest
+        run: |
+          docker pull ${{ inputs.image }}:${{ github.sha }}-amd64
+          docker pull ${{ inputs.image }}:${{ github.sha }}-arm64
+          docker manifest create ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }} ${{ inputs.image }}:${{ github.sha }}-amd64 ${{ inputs.image }}:${{ github.sha }}-arm64
+          docker manifest push ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }}
+
+      - uses: Create :latest manifest
+        if: github.ref == 'refs/heads/main'
+        run: |
+          docker manifest create ${{ env.GHCR_REGISTRY_IMAGE }}:latest ${{ inputs.image }}:${{ github.sha }}-amd64 ${{ inputs.image }}:${{ github.sha }}-arm64
+          docker manifest push ${{ env.GHCR_REGISTRY_IMAGE }}:latest
