--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -119,8 +119,8 @@ jobs:
 
       - name: Create commit manifest
         run: |
-          docker pull ${{ inputs.image }}:${{ github.sha }}-amd64
-          docker pull ${{ inputs.image }}:${{ github.sha }}-arm64
+          docker pull ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }}-amd64
+          docker pull ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }}-arm64
           docker manifest create ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }} ${{ inputs.image }}:${{ github.sha }}-amd64 ${{ inputs.image }}:${{ github.sha }}-arm64
           docker manifest push ${{ env.GHCR_REGISTRY_IMAGE }}:${{ github.sha }}
 
