--- a/bridgeconfig/slack.tpl.yaml
+++ b/bridgeconfig/slack.tpl.yaml
@@ -16,7 +16,7 @@ network:
     #  .Profile.Pronouns - The pronouns of the user
     #  .Profile.Email - The email address of the user
     #  .Profile.Phone - The formatted phone number of the user
-    displayname_template: '{{ `{{.Profile.DisplayName}}{{if .IsBot}} (bot){{end}}` }}'
+    displayname_template: '{{ `{{or .Profile.DisplayName .Profile.RealName .Name}}{{if .IsBot}} (bot){{end}}` }}'
     # Channel name template for Slack channels (all types). Available variables:
     #  .Name - The name of the channel
     #  .TeamName - The name of the team the channel is in
